Fix: z-index style

--- a/src/assets/scss/components/session/_schedule-table.scss
+++ b/src/assets/scss/components/session/_schedule-table.scss
@@ -17,6 +17,9 @@
     table-layout: fixed;
     height: 100%;
 
+    position: relative;
+    z-index: 0;
+
     .room-list {
       tr {
         th {
